[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahler"
version = "0.1.0"
description = "MAHLER CLI backbone"
readme = "README.md"
authors = [
  { name = "Da Teng", email = "tengda1997@gmail.com" }
]
maintainers = [
  { name = "Tiwary Lab" }
]
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "af2rave @ git+https://github.com/tiwarylab/af2rave.git",
  "matplotlib"
]
keywords = ["cli"]

[project.urls]
Homepage = "https://github.com/tiwarylab/mahler"
Repository = "https://github.com/tiwarylab/mahler"

[project.scripts]
mahler = "mahler.cli:main"

[tool.setuptools.packages.find]
include = ["mahler*"]
